--- a/contact.html
+++ b/contact.html
@@ -1,33 +1,197 @@
 <!DOCTYPE html>
-<html lang="en" x-data="{ darkMode: false, submitted: false }" :class="{ 'dark': darkMode }">
+<html lang="en" x-data="{ darkMode: false, submitted: false }" x-init="darkMode = localStorage.getItem('darkMode') === 'true'; $watch('darkMode', val => localStorage.setItem('darkMode', val))" :class="{ 'dark': darkMode }">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - Noundry</title>
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <script src="https://cdn.tailwindcss.com"></script>
     <script defer src="https://unpkg.com/alpinejs@3.x.x/dist/cdn.min.js"></script>
-    <script>tailwind.config = { darkMode: 'class' }</script>
+    <script>
+        tailwind.config = {
+            darkMode: 'class',
+            theme: {
+                extend: {
+                    colors: {
+                        primary: {
+                            50: '#eff6ff',
+                            500: '#3b82f6',
+                            600: '#2563eb',
+                            700: '#1d4ed8',
+                        }
+                    }
+                }
+            }
+        }
+    </script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <style>body { font-family: 'Inter', sans-serif; }</style>
 </head>
-<body class="bg-white dark:bg-gray-900">
+<body class="bg-gray-50 dark:bg-gray-900">
     <nav class="fixed top-0 w-full bg-white/80 dark:bg-gray-900/80 backdrop-blur-md border-b border-gray-200 dark:border-gray-700 z-50">
         <div class="max-w-7xl mx-auto px-4 h-16 flex justify-between items-center">
-            <a href="index.html"><img x-show="!darkMode" src="assets/nd-logo-sm.png" class="h-8"><img x-show="darkMode" src="assets/wh-nd-logo-sm.png" class="h-8"></a>
+            <a href="index.html">
+                <img x-show="!darkMode" src="assets/nd-logo-sm.png" alt="Noundry" class="h-8">
+                <img x-show="darkMode" src="assets/wh-nd-logo-sm.png" alt="Noundry" class="h-8">
+            </a>
+            <button @click="darkMode = !darkMode" class="p-2 rounded-lg bg-gray-100 dark:bg-gray-800 hover:bg-gray-200 dark:hover:bg-gray-700 transition-colors">
+                <svg x-show="!darkMode" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path>
+                </svg>
+                <svg x-show="darkMode" class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 12H3m15.364 6.364l-.707-.707M6.343 6.343l-.707-.707m12.728 0l-.707.707M6.343 17.657l-.707.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path>
+                </svg>
+            </button>
         </div>
     </nav>
-    <div class="pt-32 pb-20">
-        <div class="max-w-4xl mx-auto px-4">
-            <h1 class="text-5xl font-bold text-gray-900 dark:text-white mb-8 text-center">Contact Us</h1>
-            <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-8">
-                <form @submit.prevent="submitted = true" class="space-y-6" netlify>
-                    <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Name</label><input type="text" required class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></div>
-                    <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Email</label><input type="email" required class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></div>
-                    <div><label class="block text-sm font-medium mb-2 text-gray-700 dark:text-gray-300">Message</label><textarea required rows="6" class="w-full px-4 py-2 border rounded-lg dark:bg-gray-900 dark:border-gray-700 dark:text-white"></textarea></div>
-                    <button type="submit" class="w-full bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-semibold" x-show="!submitted">Send Message</button>
-                    <div x-show="submitted" class="bg-green-50 dark:bg-green-900/20 p-4 rounded-lg text-green-800 dark:text-green-200">Thank you! We'll respond within 24 hours.</div>
-                </form>
+
+    <!-- Hero Section -->
+    <section class="pt-24 pb-12 bg-gradient-to-br from-primary-50 via-blue-50 to-indigo-50 dark:from-gray-900 dark:via-gray-800 dark:to-gray-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 text-center">
+            <h1 class="text-5xl lg:text-6xl font-bold text-gray-900 dark:text-white mb-6">
+                Get in <span class="text-primary-600 dark:text-primary-400">Touch</span>
+            </h1>
+            <p class="text-xl text-gray-600 dark:text-gray-300 max-w-2xl mx-auto">
+                Have a question or need support? We're here to help you succeed with Noundry.
+            </p>
+        </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="py-16 bg-gray-50 dark:bg-gray-900">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="grid lg:grid-cols-3 gap-8 mb-16">
+                <!-- Contact Info Cards -->
+                <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8 border border-gray-100 dark:border-gray-700 hover:shadow-xl transition-shadow">
+                    <div class="inline-flex items-center justify-center w-14 h-14 bg-blue-100 dark:bg-blue-900 rounded-xl mb-4">
+                        <svg class="w-7 h-7 text-blue-600 dark:text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Email Us</h3>
+                    <p class="text-gray-600 dark:text-gray-400 mb-3">Send us an email anytime</p>
+                    <a href="mailto:support@noundry.com" class="text-primary-600 dark:text-primary-400 hover:text-primary-700 dark:hover:text-primary-300 font-medium">
+                        support@noundry.com
+                    </a>
+                </div>
+
+                <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8 border border-gray-100 dark:border-gray-700 hover:shadow-xl transition-shadow">
+                    <div class="inline-flex items-center justify-center w-14 h-14 bg-green-100 dark:bg-green-900 rounded-xl mb-4">
+                        <svg class="w-7 h-7 text-green-600 dark:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Call Us</h3>
+                    <p class="text-gray-600 dark:text-gray-400 mb-3">Mon-Fri from 9am to 5pm EST</p>
+                    <a href="tel:877-524-4455" class="text-primary-600 dark:text-primary-400 hover:text-primary-700 dark:hover:text-primary-300 font-medium">
+                        877-524-4455
+                    </a>
+                </div>
+
+                <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-lg p-8 border border-gray-100 dark:border-gray-700 hover:shadow-xl transition-shadow">
+                    <div class="inline-flex items-center justify-center w-14 h-14 bg-purple-100 dark:bg-purple-900 rounded-xl mb-4">
+                        <svg class="w-7 h-7 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                        </svg>
+                    </div>
+                    <h3 class="text-xl font-semibold text-gray-900 dark:text-white mb-2">Mail Us</h3>
+                    <p class="text-gray-600 dark:text-gray-400 mb-3">Send us physical mail</p>
+                    <address class="text-primary-600 dark:text-primary-400 font-medium not-italic">
+                        PO BOX 302<br>
+                        Florham Park, NJ 07932
+                    </address>
+                </div>
+            </div>
+
+            <!-- Contact Form -->
+            <div class="max-w-3xl mx-auto">
+                <div class="bg-white dark:bg-gray-800 rounded-2xl shadow-xl p-8 lg:p-12 border border-gray-100 dark:border-gray-700">
+                    <div class="text-center mb-8">
+                        <h2 class="text-3xl font-bold text-gray-900 dark:text-white mb-3">Send us a Message</h2>
+                        <p class="text-gray-600 dark:text-gray-400">Fill out the form below and we'll get back to you within 24 hours.</p>
+                    </div>
+
+                    <form @submit.prevent="submitted = true" name="contact" method="POST" netlify netlify-honeypot="bot-field" class="space-y-6">
+                        <!-- Hidden fields for Netlify -->
+                        <input type="hidden" name="form-name" value="contact">
+                        <div class="hidden">
+                            <label>Don't fill this out if you're human: <input name="bot-field" /></label>
+                        </div>
+
+                        <div class="grid md:grid-cols-2 gap-6">
+                            <div>
+                                <label class="block text-sm font-semibold mb-2 text-gray-700 dark:text-gray-300">
+                                    Name <span class="text-red-500">*</span>
+                                </label>
+                                <input type="text" name="name" required
+                                    class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-900 dark:text-white transition-colors"
+                                    placeholder="John Doe">
+                            </div>
+                            <div>
+                                <label class="block text-sm font-semibold mb-2 text-gray-700 dark:text-gray-300">
+                                    Email <span class="text-red-500">*</span>
+                                </label>
+                                <input type="email" name="email" required
+                                    class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-900 dark:text-white transition-colors"
+                                    placeholder="john@example.com">
+                            </div>
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-semibold mb-2 text-gray-700 dark:text-gray-300">
+                                Subject <span class="text-red-500">*</span>
+                            </label>
+                            <input type="text" name="subject" required
+                                class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-900 dark:text-white transition-colors"
+                                placeholder="How can we help?">
+                        </div>
+
+                        <div>
+                            <label class="block text-sm font-semibold mb-2 text-gray-700 dark:text-gray-300">
+                                Message <span class="text-red-500">*</span>
+                            </label>
+                            <textarea name="message" required rows="6"
+                                class="w-full px-4 py-3 border border-gray-300 dark:border-gray-600 rounded-lg focus:ring-2 focus:ring-primary-500 focus:border-transparent dark:bg-gray-900 dark:text-white transition-colors resize-none"
+                                placeholder="Tell us more about your inquiry..."></textarea>
+                        </div>
+
+                        <button type="submit"
+                            x-show="!submitted"
+                            class="w-full bg-primary-600 hover:bg-primary-700 text-white px-8 py-4 rounded-lg font-semibold text-lg transition-colors shadow-lg hover:shadow-xl transform hover:-translate-y-0.5 duration-200">
+                            Send Message
+                        </button>
+
+                        <div x-show="submitted"
+                            x-transition
+                            class="bg-green-50 dark:bg-green-900/20 border border-green-200 dark:border-green-800 p-6 rounded-lg">
+                            <div class="flex items-start">
+                                <div class="flex-shrink-0">
+                                    <svg class="w-6 h-6 text-green-600 dark:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                                    </svg>
+                                </div>
+                                <div class="ml-3">
+                                    <h3 class="text-lg font-semibold text-green-800 dark:text-green-200">Message sent successfully!</h3>
+                                    <p class="mt-1 text-green-700 dark:text-green-300">Thank you for contacting us. We'll respond within 24 hours.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+
+                <!-- Additional Info -->
+                <div class="mt-8 text-center">
+                    <p class="text-gray-600 dark:text-gray-400 mb-4">
+                        For urgent matters, please call us directly at <a href="tel:877-524-4455" class="text-primary-600 dark:text-primary-400 font-semibold hover:underline">877-524-4455</a>
+                    </p>
+                    <p class="text-sm text-gray-500 dark:text-gray-500">
+                        Looking for technical support? Visit our <a href="help.html" class="text-primary-600 dark:text-primary-400 hover:underline">Help Center</a>
+                    </p>
+                </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-black text-white py-16">
