--- a/help.html
+++ b/help.html
@@ -150,7 +150,7 @@
     </section>    <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-black text-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-4 gap-8">
+            <div class="grid lg:grid-cols-5 gap-8">
                 <div class="lg:col-span-2">
                     <div class="flex items-center mb-6">
                         <!-- <span class="text-3xl font-bold text-primary-400">Noundry</span> -->
@@ -173,6 +173,14 @@
                             </svg>
                         </a>
                     </div>
+                </div>
+
+                <div>
+                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
+                    <ul class="space-y-3">
+                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.com (C#/.NET)</a></li>
+                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.org (TypeScript)</a></li>
+                    </ul>
                 </div>
 
                 <div>
