--- a/index.html
+++ b/index.html
@@ -55,12 +55,32 @@
                     </div>
                     <div class="hidden md:block ml-10">
                         <div class="flex items-baseline space-x-8">
+                            <!-- Framework Dropdown -->
+                            <div class="relative" x-data="{ open: false }">
+                                <button @click="open = !open" @click.away="open = false" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors inline-flex items-center">
+                                    Framework
+                                    <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
+                                    </svg>
+                                </button>
+                                <div x-show="open" x-transition class="absolute left-0 mt-2 w-64 bg-white dark:bg-gray-800 rounded-lg shadow-lg border border-gray-200 dark:border-gray-700 py-2 z-50">
+                                    <a href="index.html" class="block px-4 py-3 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">
+                                        <div class="font-semibold">noundry.com</div>
+                                        <div class="text-xs text-gray-500 dark:text-gray-400">dotnet/C#</div>
+                                    </a>
+                                    <a href="https://noundry.org" target="_blank" class="block px-4 py-3 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700">
+                                        <div class="font-semibold">noundry.org</div>
+                                        <div class="text-xs text-gray-500 dark:text-gray-400">Bun+Hono/Typescript</div>
+                                    </a>
+                                </div>
+                            </div>
+
                             <a href="libraries.html" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors">Libraries</a>
 
                             <!-- UI Components Dropdown -->
                             <div class="relative" x-data="{ open: false }">
                                 <button @click="open = !open" @click.away="open = false" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors inline-flex items-center">
-                                    UI Components
+                                    UI 
                                     <svg class="w-4 h-4 ml-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path>
                                     </svg>
@@ -86,7 +106,6 @@
                                 </div>
                             </div>
 
-                            <a href="getting-started.html" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors">Quick Start</a>
                             <a href="andy-ai.html" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors">AI</a>
                             <a href="#cloud" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors">Cloud</a>
                             <a href="docs.html" class="text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400 px-3 py-2 text-sm font-medium transition-colors">Docs</a>
@@ -117,6 +136,11 @@
         <!-- Mobile menu -->
         <div x-show="mobileMenuOpen" x-transition class="md:hidden bg-white dark:bg-gray-900 border-t border-gray-200 dark:border-gray-700">
             <div class="px-2 pt-2 pb-3 space-y-1">
+                <div class="px-3 py-2">
+                    <div class="text-xs font-semibold text-gray-500 dark:text-gray-400 uppercase mb-2">Framework</div>
+                    <a href="index.html" class="block px-3 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 rounded">noundry.com (C# / .NET)</a>
+                    <a href="https://noundry.org" target="_blank" class="block px-3 py-2 text-sm text-gray-700 dark:text-gray-300 hover:bg-gray-100 dark:hover:bg-gray-700 rounded">noundry.org (TypeScript)</a>
+                </div>
                 <a href="libraries.html" class="block px-3 py-2 text-base font-medium text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400">Libraries</a>
                 <a href="ui-components.html" class="block px-3 py-2 text-base font-medium text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400">UI Components</a>
                 <a href="https://authnz.net" target="_blank" class="block px-3 py-2 text-base font-medium text-gray-700 dark:text-gray-300 hover:text-primary-600 dark:hover:text-primary-400">authnz.net</a>
@@ -1826,6 +1850,150 @@
         </div>
     </section>
 
+    <!-- Noundry.ts / Noundry.org Section -->
+    <section id="noundry-ts" class="py-24 bg-gradient-to-br from-blue-50 to-indigo-50 dark:from-gray-900 dark:to-gray-800">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+            <div class="text-center mb-16">
+                <div class="inline-block mb-4 px-4 py-1 bg-blue-100 dark:bg-blue-900/30 rounded-full">
+                    <span class="text-blue-700 dark:text-blue-400 font-semibold text-sm">New Framework</span>
+                </div>
+                <h2 class="text-4xl font-bold text-gray-900 dark:text-white mb-4">
+                    Introducing Noundry.ts
+                </h2>
+                <p class="text-xl text-gray-600 dark:text-gray-300 max-w-3xl mx-auto">
+                    The same powerful architecture, now available for TypeScript developers using Bun + Hono
+                </p>
+            </div>
+
+            <div class="grid lg:grid-cols-2 gap-12 items-center mb-16">
+                <div>
+                    <h3 class="text-3xl font-bold text-gray-900 dark:text-white mb-6">
+                        Full-Stack TypeScript Made Simple
+                    </h3>
+                    <p class="text-lg text-gray-600 dark:text-gray-300 mb-6">
+                        <strong>Noundry.org</strong> (aka Noundry.ts) brings the enterprise-grade architecture of Noundry to the TypeScript ecosystem.
+                        Built on Bun, Hono, and modern web technologies, it offers a complete framework for building production-ready applications.
+                    </p>
+                    <div class="space-y-4 mb-8">
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 dark:text-blue-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Blazing Fast Runtime</h4>
+                                <p class="text-gray-600 dark:text-gray-300">Powered by Bun, 3x faster than Node.js with native TypeScript support</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 dark:text-blue-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 20l4-16m4 4l4 4-4 4M6 16l-4-4 4-4"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Hono.js Framework</h4>
+                                <p class="text-gray-600 dark:text-gray-300">Ultrafast web framework with intuitive API design and excellent TypeScript support</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <svg class="w-6 h-6 text-blue-600 dark:text-blue-400 mr-3 flex-shrink-0 mt-1" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"></path>
+                            </svg>
+                            <div>
+                                <h4 class="font-semibold text-gray-900 dark:text-white mb-1">Pure HTML + Vite</h4>
+                                <p class="text-gray-600 dark:text-gray-300">No React required - build beautiful UIs with HonoX and Basecoat UI</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-wrap gap-4">
+                        <a href="https://noundry.org" target="_blank" class="inline-flex items-center bg-blue-600 hover:bg-blue-700 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            Explore Noundry.ts
+                            <svg class="w-5 h-5 ml-2" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M14 5l7 7m0 0l-7 7m7-7H3"></path>
+                            </svg>
+                        </a>
+                        <a href="https://github.com/noundryfx/noundry.ts" target="_blank" class="inline-flex items-center bg-gray-800 hover:bg-gray-900 dark:bg-gray-700 dark:hover:bg-gray-600 text-white px-6 py-3 rounded-lg font-semibold transition-colors">
+                            <svg class="w-5 h-5 mr-2" fill="currentColor" viewBox="0 0 24 24">
+                                <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
+                            </svg>
+                            View on GitHub
+                        </a>
+                    </div>
+                </div>
+
+                <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
+                    <h4 class="text-xl font-bold text-gray-900 dark:text-white mb-6">Quick Start with Noundry.ts</h4>
+                    <div class="bg-gray-900 rounded-lg p-6 mb-6">
+                        <code class="text-green-400 font-mono text-sm">
+                            <span class="text-gray-400">$</span> bunx @noundryfx/ndts-cli init
+                        </code>
+                    </div>
+                    <div class="space-y-4">
+                        <div class="flex items-start">
+                            <div class="flex-shrink-0 w-8 h-8 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center text-blue-600 dark:text-blue-400 font-bold mr-3">1</div>
+                            <div>
+                                <p class="text-gray-700 dark:text-gray-300"><strong>TypeScript-First</strong> development with full type safety</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <div class="flex-shrink-0 w-8 h-8 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center text-blue-600 dark:text-blue-400 font-bold mr-3">2</div>
+                            <div>
+                                <p class="text-gray-700 dark:text-gray-300"><strong>BEFE Architecture</strong> (Back-End For Front-End) for optimal performance</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <div class="flex-shrink-0 w-8 h-8 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center text-blue-600 dark:text-blue-400 font-bold mr-3">3</div>
+                            <div>
+                                <p class="text-gray-700 dark:text-gray-300"><strong>Drizzle ORM</strong> for type-safe database operations</p>
+                            </div>
+                        </div>
+                        <div class="flex items-start">
+                            <div class="flex-shrink-0 w-8 h-8 bg-blue-100 dark:bg-blue-900/30 rounded-full flex items-center justify-center text-blue-600 dark:text-blue-400 font-bold mr-3">4</div>
+                            <div>
+                                <p class="text-gray-700 dark:text-gray-300"><strong>Basecoat UI</strong> components (no React required)</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Hybrid Architecture -->
+            <div class="bg-white dark:bg-gray-800 rounded-xl p-8 shadow-xl border border-gray-200 dark:border-gray-700">
+                <h3 class="text-2xl font-bold text-gray-900 dark:text-white mb-4 text-center">Best of Both Worlds: Hybrid Architecture</h3>
+                <p class="text-center text-gray-600 dark:text-gray-300 mb-8 max-w-3xl mx-auto">
+                    Build your enterprise API with Noundry.com's C#/.NET tooling, then create a lightning-fast frontend with Noundry.ts using the BEFE pattern
+                </p>
+                <div class="grid md:grid-cols-3 gap-6">
+                    <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
+                        <div class="inline-flex items-center justify-center w-16 h-16 bg-purple-100 dark:bg-purple-900/30 rounded-full mb-4">
+                            <svg class="w-8 h-8 text-purple-600 dark:text-purple-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 12h14M5 12a2 2 0 01-2-2V6a2 2 0 012-2h14a2 2 0 012 2v4a2 2 0 01-2 2M5 12a2 2 0 00-2 2v4a2 2 0 002 2h14a2 2 0 002-2v-4a2 2 0 00-2-2m-2-4h.01M17 16h.01"></path>
+                            </svg>
+                        </div>
+                        <h4 class="font-bold text-gray-900 dark:text-white mb-2">Enterprise API</h4>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">Noundry.com (C#/.NET) for robust, scalable backend services</p>
+                    </div>
+                    <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
+                        <div class="inline-flex items-center justify-center w-16 h-16 bg-green-100 dark:bg-green-900/30 rounded-full mb-4">
+                            <svg class="w-8 h-8 text-green-600 dark:text-green-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"></path>
+                            </svg>
+                        </div>
+                        <h4 class="font-bold text-gray-900 dark:text-white mb-2">BEFE Layer</h4>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">Noundry.ts for optimized API wrappers and aggregation</p>
+                    </div>
+                    <div class="text-center p-6 bg-gray-50 dark:bg-gray-900/50 rounded-lg">
+                        <div class="inline-flex items-center justify-center w-16 h-16 bg-blue-100 dark:bg-blue-900/30 rounded-full mb-4">
+                            <svg class="w-8 h-8 text-blue-600 dark:text-blue-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L9 20l-1 1h8l-1-1-.75-3M3 13h18M5 17h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"></path>
+                            </svg>
+                        </div>
+                        <h4 class="font-bold text-gray-900 dark:text-white mb-2">Modern Frontend</h4>
+                        <p class="text-sm text-gray-600 dark:text-gray-300">HonoX + Basecoat UI for lightning-fast user experiences</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Pricing Section -->
     <section id="pricing" class="py-20 bg-gray-50 dark:bg-gray-800">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -2107,7 +2275,7 @@
     <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-black text-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-4 gap-8">
+            <div class="grid lg:grid-cols-5 gap-8">
                 <div class="lg:col-span-2">
                     <div class="flex items-center mb-6">
                         <!-- <span class="text-3xl font-bold text-primary-400">Noundry</span> -->
@@ -2124,6 +2292,14 @@
                             </svg>
                         </a>
                     </div>
+                </div>
+
+                <div>
+                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
+                    <ul class="space-y-3">
+                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.com (C#/.NET)</a></li>
+                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.org (TypeScript)</a></li>
+                    </ul>
                 </div>
 
                 <div>
