--- a/logably.html
+++ b/logably.html
@@ -244,7 +244,7 @@
                 </p>
             </div>
 
-            <div class="grid lg:grid-cols-4 gap-8">
+            <div class="grid lg:grid-cols-5 gap-8">
                 <div class="text-center p-8 bg-white dark:bg-gray-900 rounded-xl shadow-lg">
                     <div class="w-16 h-16 bg-amber-100 dark:bg-amber-900 rounded-full flex items-center justify-center mx-auto mb-6">
                         <svg class="w-8 h-8 text-amber-600 dark:text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -829,7 +829,7 @@
     </section>    <!-- Footer -->
     <footer class="bg-gray-900 dark:bg-black text-white py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-            <div class="grid lg:grid-cols-4 gap-8">
+            <div class="grid lg:grid-cols-5 gap-8">
                 <div class="lg:col-span-2">
                     <div class="flex items-center mb-6">
                         <!-- <span class="text-3xl font-bold text-primary-400">Noundry</span> -->
@@ -852,6 +852,14 @@
                             </svg>
                         </a>
                     </div>
+                </div>
+
+                <div>
+                    <h3 class="text-lg font-semibold mb-6">Frameworks</h3>
+                    <ul class="space-y-3">
+                        <li><a href="index.html" class="text-gray-300 hover:text-white transition-colors">Noundry.com (C#/.NET)</a></li>
+                        <li><a href="https://noundry.org" target="_blank" class="text-gray-300 hover:text-white transition-colors">Noundry.org (TypeScript)</a></li>
+                    </ul>
                 </div>
 
                 <div>
